--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -225,11 +225,12 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 
 Alonso-Ovalle, Luis \textit{\&} Aron Hirsch. (forthcoming) Keep \textit{Only} Strong,  \textit{Semantics and Pragmatics}.
 
-Alonso-Ovalle, Luis \textit{\&} Justin Royer. (2021) Random Choice from Likelihood: The Case of Chuj (Mayan), \textit{Journal of Semantics}, published online October, 29, 2021\\ (\href{https://doi.org/10.1093/jos/ffab009}{https://doi.org/10.1093/jos/ffab009})
+Alonso-Ovalle, Luis \textit{\&} Justin Royer. (2021) Random Choice from Likelihood: The Case of Chuj (Mayan), \textit{Journal of Semantics}, published online October, 29, 2021. %\\ \hspace*{\hfill}(\href{https://doi.org/10.1093/jos/ffab009}{https://doi.org/10.1093/jos/ffab009})
 
-Alonso-Ovalle, Luis \textit{\&} Henrison Hsieh. (2021) Causes and expectations: On the interpretation of the Tagalog Ability / Involuntary Action form, \textit{Journal of Semantics}, 38(3), 441-472 (\href{https://doi.org/10.1093/jos/ffab008}{https://doi.org/10.1093/jos/ffab008}).
+Alonso-Ovalle, Luis \textit{\&} Henrison Hsieh. (2021) Causes and expectations: On the interpretation of the Tagalog Ability / Involuntary Action form, \textit{Journal of Semantics}, 38(3), 441-472.% \hspace*{\hfill} (\href{https://doi.org/10.1093/jos/ffab008}{https://doi.org/10.1093/jos/ffab008}).
 
-Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. 2018. Projecting Possibilities in the Nominal Domain. Spanish \textit{Uno Cualquiera}, \textit{Journal of Semantics}. 35:1, 1-41.
+Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. 2018. Projecting Possibilities in the Nominal Domain. Spanish \textit{Uno Cualquiera}, \textit{Journal of Semantics}. 35:1, 1-41. %\\
+%\hspace*{\hfill}(\href{https://doi.org/10.1093/jos/ffx011}{https://doi.org/10.1093/jos/ffx011})
 
 %[Accepted Dec 2016]
 
@@ -240,7 +241,7 @@ Alonso-Ovalle, Luis \textit{\&} Paula
 Alonso-Ovalle, Luis \textit{\&} Paula
     Men\'endez-Benito.\ 2012. Indefinites, Dependent Plurality, and
     the Viability Requirement on Scalar Alternatives. \textit{Journal
-      of Semantics}. 30:1. 65-102. Published online on February 20 2012. doi: 10.1093/jos/ffr013
+      of Semantics}. 30:1. 65-102. %Published online on February 20 2012. doi: 10.1093/jos/ffr013
 
 Alonso-Ovalle, Luis \textit{\&} Paula
     Men\'endez-Benito.\ 2011.\ Domain Restrictions, Modal
@@ -296,7 +297,7 @@ Alonso-Ovalle, Luis. 2000. Aspectos gnoseol\'ogicos de la ling\"u\'istica de Cue
 % \renewcommand{\theenumii}{\roman{\enumii}}
 % \begin{revnumerate}
 
-Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. 2020. Free Choice Items and Modal Indefinites. \textit{The Wiley Blackwell Companion to Semantics}, ed. by Lisa Matthewson, Cecile Meier, Hotze Rullmann, and Thomas E. Zimmerman, Wiley Blackwell, 39 pages. doi: 10.1002/9781118788516.sem00
+Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. 2020. Free Choice Items and Modal Indefinites. \textit{The Wiley Blackwell Companion to Semantics}, ed. by Lisa Matthewson, Cecile Meier, Hotze Rullmann, and Thomas E. Zimmerman, Wiley Blackwell, 39 pages. %doi: 10.1002/9781118788516.sem00
 
 Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. 2017. Epistemic Indefinites: On the Content and Distribution of the Epistemic Effect. \textit{Modality across Syntactic Categories.} ed. by Ana Arregui, Marisa Rivero, and Andr\'es Pablo Salanova, Oxford University Press, pp. 11-30.
 
@@ -354,32 +355,32 @@ Alonso-Ovalle, Luis and Jonathan Palucci. (forthcoming) Numeral \textit{Any}: in
 
 Alonso-Ovalle, Luis and Justin Royer. (forthcoming) Modality in the Nominal Domain: The Chuj \textit{yalnhej}+ wh Series, \textit{Proceedings of the Thirty-first Semantics and Linguistic Theory Conference}, ed. by Nicole Dreier, Chloe Kwon, Thomas Darnell, and John Starr.
 
- Alonso-Ovalle, Luis and Esmail Moghiseh. 2021. Numeral \textit{Any}: the View from Farsi, \textit{Proceedings of the Thirtieth Semantics and Linguistic Theory Conference}, ed. by Joseph Rhyne, Kaelyn Lamp, Nicole Dreier, and Chloe Kwon, CLC Publications, Cornell University, pp. 485-503 {\footnotesize [\href{https://doi.org/10.3765/salt.v30i0.4829}{https://doi.org/10.3765/salt.v30i0.4829}]}
+ Alonso-Ovalle, Luis and Esmail Moghiseh. 2021. Numeral \textit{Any}: the View from Farsi, \textit{Proceedings of the Thirtieth Semantics and Linguistic Theory Conference}, ed. by Joseph Rhyne, Kaelyn Lamp, Nicole Dreier, and Chloe Kwon, CLC Publications, Cornell University, pp. 485-503. %{\footnotesize [\href{https://doi.org/10.3765/salt.v30i0.4829}{https://doi.org/10.3765/salt.v30i0.4829}]}
 
       
     Alonso-Ovalle, Luis and Justin Royer. 2020. Random choice modality: The view from Chuj (Mayan), \textit{Proceedings of the Twenty-Fourth Annual} Sinn und Bedeutung \textit{Conference}, ed. by Michael Franke, Nikola Kompa, Mingya Liu, Jutta L. Mueller, and Juliane Schwab, Osnabr\"{u}ck University, Humboldt University of Berlin, pp. 48-65. 
-    {\footnotesize [\href{https://semanticsarchive.net/Archive/mZhNDA4Y/SuB24-twovolume.pdf}{https://semanticsarchive.net/Archive/mZhNDA4Y/SuB24-twovolume.pdf}]}
+    %{\footnotesize [\href{https://semanticsarchive.net/Archive/mZhNDA4Y/SuB24-twovolume.pdf}{https://semanticsarchive.net/Archive/mZhNDA4Y/SuB24-twovolume.pdf}]}
     
       Alonso-Ovalle, Luis and Esmail Moghiseh. 2019. Neutralizing Free Choice Items via Maximal Domain
-Restriction: Farsi \textit{-i} Indefinites, \textit{Proceedings of the Twenty-Ninth Semantics and Linguistic Theory Conference}, ed. by Katherine Blake, Forrest Davis, Kaelyn Lamp, and Joseph Rhyne, CLC Publications, pp. 686–705. {\footnotesize
-[\href{https://doi.org/10.3765/salt.v29i0.4636}{https://doi.org/10.3765/salt.v29i0.4636}]}
+Restriction: Farsi \textit{-i} Indefinites, \textit{Proceedings of the Twenty-Ninth Semantics and Linguistic Theory Conference}, ed. by Katherine Blake, Forrest Davis, Kaelyn Lamp, and Joseph Rhyne, CLC Publications, pp. 686–705. 
+%{\footnotesize [\href{https://doi.org/10.3765/salt.v29i0.4636}{https://doi.org/10.3765/salt.v29i0.4636}]}
       
 Alonso-Ovalle, Luis, and Vincent Rouillard. 2019. Number Inflection, Spanish Bare Interrogatives, and Higher-Order Quantification. \textit{Proceedings
 of the Forty-Ninth Annual Meeting of the North East Linguistic Society}, ed. by Maggie Baird and Jonathan Pesetsky, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp 25-39.
  
- Alonso-Ovalle, Luis and Esmail Moghiseh. 2019. Contradiction-Free Strengthening and Alternative Discharge: The Case of Farsi \textit{-i} Indefinites. \textit{Proceedings of the Twenty-Third Annual} Sinn und Bedeutung \textit{Conference}, ed. by Mar\'ia Teresa Espinal, Elena Castoviejo, Manuel Leonetti, Louise McNally, and Cristina Real-Puigdollers, Universitat Aut\`onoma de Barcelona, Ikerbasque and UPV/EHU, Universidad de Alcal\'a and Universitat Pompeu Fabra, pp. 1-18 {\footnotesize [\href{https://semanticsarchive.net/Archive/Tg3ZGI2M/SuB23-twovolume.pdf}{https://semanticsarchive.net/Archive/Tg3ZGI2M/SuB23-twovolume.pdf}]}
+ Alonso-Ovalle, Luis and Esmail Moghiseh. 2019. Contradiction-Free Strengthening and Alternative Discharge: The Case of Farsi \textit{-i} Indefinites. \textit{Proceedings of the Twenty-Third Annual} Sinn und Bedeutung \textit{Conference}, ed. by Mar\'ia Teresa Espinal, Elena Castoviejo, Manuel Leonetti, Louise McNally, and Cristina Real-Puigdollers, Universitat Aut\`onoma de Barcelona, Ikerbasque and UPV/EHU, Universidad de Alcal\'a and Universitat Pompeu Fabra, pp. 1-18. %{\footnotesize [\href{https://semanticsarchive.net/Archive/Tg3ZGI2M/SuB23-twovolume.pdf}{https://semanticsarchive.net/Archive/Tg3ZGI2M/SuB23-twovolume.pdf}]}
       
  Royer, Justin, and Luis Alonso-Ovalle. 2019. Randon Choice Modality in Chuj: The Case of \textit{Komon}. \textit{Proceedings of Form and Analysis in Mayan Linguistics 5 (FAMLi 5)}, ed. by Ryan Bennett, Robert Henderson, Pedro Mateo Pedro, and Megan Harve, {\footnotesize [\href{https://escholarship.org/uc/item/5587h7df}{https://escholarship.org/uc/item/5587h7df} ]}
       
-Alonso-Ovalle, Luis, and Aron Hirsch. 2018. Keep \textit{Only} Strong. \textit{Proceedings of the Twenty-Eighth Semantics and Linguistic Theory Conference}, ed. by Sireemas Maspong, Brynhildur Stef\'ansd\'ottir, Katherine Blake and Forrest Davis, CLC Publications, pp. 251-270. {\footnotesize [\href{https://doi.org/10.3765/salt.v28i0.4439}{https://doi.org/10.3765/salt.v28i0.4439}]}
+Alonso-Ovalle, Luis, and Aron Hirsch. 2018. Keep \textit{Only} Strong. \textit{Proceedings of the Twenty-Eighth Semantics and Linguistic Theory Conference}, ed. by Sireemas Maspong, Brynhildur Stef\'ansd\'ottir, Katherine Blake and Forrest Davis, CLC Publications, pp. 251-270. %{\footnotesize [\href{https://doi.org/10.3765/salt.v28i0.4439}{https://doi.org/10.3765/salt.v28i0.4439}]}
        
  Alonso-Ovalle, Luis, and Henrison Hsieh. 2018. Overcoming the Unexpected: The Tagalog Ability/Involuntary Action Form.  \textit{Proceedings of the Thirty-Fifth West Coast Conference on Formal Linguistics}, ed. by Will Bennett, Lindsay Hracs, and Dennis Storoshenko, Somerville, MA: Cascadilla Proceedings Project.      
       
- Alonso-Ovalle, Luis, and Henrison Hsieh. 2017. Causes and Expectations: On the Interpretation of the Tagalog Ability/Involuntary Action Verbal Inflection. \textit{Proceedings of the Twenty-Seventh Semantics and Linguistic Theory Conference}, ed. by Dan Burgdorf, Jacob Collard, Sireemas Maspong, and Brynhildur Stef\'ansd\'ottir, CLC Publications, pp. 75-94. {\footnotesize [\href{https://doi.org/10.3765/salt.v27i0.4132}{https://doi.org/10.3765/salt.v27i0.4132}]}
+ Alonso-Ovalle, Luis, and Henrison Hsieh. 2017. Causes and Expectations: On the Interpretation of the Tagalog Ability/Involuntary Action Verbal Inflection. \textit{Proceedings of the Twenty-Seventh Semantics and Linguistic Theory Conference}, ed. by Dan Burgdorf, Jacob Collard, Sireemas Maspong, and Brynhildur Stef\'ansd\'ottir, CLC Publications, pp. 75-94. %{\footnotesize [\href{https://doi.org/10.3765/salt.v27i0.4132}{https://doi.org/10.3765/salt.v27i0.4132}]}
 
 Alonso-Ovalle, Luis. 2016. Are All Concessive Scalar Particles the Same? Probing into Spanish \textit{Siquiera}.  \textit{Proceedings of the Twenty-Sixth
   Semantics and Linguistic Theory Conference}, ed. by Mary Moroney and
-Carol-Rose Little, CLC Publications, pp. 185-204. {\footnotesize [\href{https://doi.org/10.3765/salt.v26i0.3820}{https://doi.org/10.3765/salt.v26i0.3820}]}
+Carol-Rose Little, CLC Publications, pp. 185-204. %{\footnotesize [\href{https://doi.org/10.3765/salt.v26i0.3820}{https://doi.org/10.3765/salt.v26i0.3820}]}
 
 Alonso-Ovalle, Luis, and Paula Men\'endez-Benito. 2016. Modal Selectivity
 in the Nominal Domain: Spanish \textit{Uno Cualquiera}. \textit{Proceedings
@@ -395,7 +396,7 @@ Alonso-Ovalle, Luis and Paula
 Men\'endez-Benito. 2013. Modal Determiners and Alternatives:
 Quantity and Ignorance Effects.  \textit{Proceedings of the Twenty-Third
   Semantics and Linguistic Theory Conference}, ed. by Todd Snider, CLC
-Publications, pp. 570-586. {\footnotesize [\href{https://doi.org/10.3765/salt.v23i0.2671}{https://doi.org/10.3765/salt.v23i0.2671}]}
+Publications, pp. 570-586. %{\footnotesize [\href{https://doi.org/10.3765/salt.v23i0.2671}{https://doi.org/10.3765/salt.v23i0.2671}]}
 
 Alonso-Ovalle, Luis and Paula
 Men\'endez-Benito. 2013. Epistemic Indefinites: Are We Ignorant About
@@ -412,12 +413,14 @@ Men\'endez-Benito. 2013. Plural Epistemic
 Alonso-Ovalle, Luis and Paula Men\'endez-Benito. 2013. Random
 Choice Modality: Spanish \textit{Un {\em NP}
   Cualquiera}. \textit{Proceedings of the Seventeenth Annual} Sinn und Bedeutung \textit{Conference}, ed. by
-Emmanuel Chemla, Vincent Homer and Gr\'egoire Winterstein, Paris, pp. 27-43 {\footnotesize [\href{http://semanticsarchive.net/sub2012/}{http://semanticsarchive.net/sub2012/}]}
+Emmanuel Chemla, Vincent Homer and Gr\'egoire Winterstein, Paris, pp. 27-43.
+% {\footnotesize [\href{http://semanticsarchive.net/sub2012/}{http://semanticsarchive.net/sub2012/}]}
 
 Alonso-Ovalle, Luis and Paula Men\'endez-Benito. 2011. Expressing Indifference: Spanish
 \textit{Un {\em NP} Cualquiera}. \textit{Proceedings of the Twenty-First
   Semantics and Linguistic Theory Conference}, ed. by Neil Ashton,
-Anca Chereches, and David Lutz, pp. 333-352. {\footnotesize [\href{http://elanguage.net/journals/salt/issue/view/324]}{http://elanguage.net/journals/salt/issue/view/324]]}}
+Anca Chereches, and David Lutz, pp. 333-352. 
+%{\footnotesize [\href{http://elanguage.net/journals/salt/issue/view/324]}{http://elanguage.net/journals/salt/issue/view/324]]}}
 
 Alonso-Ovalle, Luis; Men\'endez-Benito, Paula, and Schwarz,
 Florian. 2011. Maximize Presupposition and Two Types of Definite
@@ -426,7 +429,7 @@ Competitors. \textit{Proceedings of the Thirty-Ninth Annual Meeting of the North
 Smith, pp. 29-41. 
 
 
-Alonso-Ovalle, Luis. 2009. \textsc{Even} and Biased Questions: The Case of Spanish \textit{Siquiera}. \textit{Proceedings of the Nineteenth Semantics and Linguistic Theory Conference}, ed. by Satoshi Ito and Ed Cormany, Cornell University, pp. 1-18. {\footnotesize [\href{https://doi.org/10.3765/salt.v19i0.2540}{https://doi.org/10.3765/salt.v19i0.2540}]}
+Alonso-Ovalle, Luis. 2009. \textsc{Even} and Biased Questions: The Case of Spanish \textit{Siquiera}. \textit{Proceedings of the Nineteenth Semantics and Linguistic Theory Conference}, ed. by Satoshi Ito and Ed Cormany, Cornell University, pp. 1-18.% {\footnotesize [\href{https://doi.org/10.3765/salt.v19i0.2540}{https://doi.org/10.3765/salt.v19i0.2540}]}
 
 
 Alonso-Ovalle, Luis \textit{\&} Paula
@@ -884,7 +887,7 @@ Mathieu Paill\'e, ``Term Colors and Exhaustive Readings.'' (co-supervised with B
 
 Will Johnston, ``Questions and Cumulative Readings'', (co-supervised with Bernhard Schwarz, succesfully defended in May 2020).
 
-Christopher Bruno, ``Contrastive negation and Presuppositional Alternatives'', (co-supervised with Bernhard Schwarz, successfully defended in May 2017.)
+Amy Bruno, ``Contrastive negation and Presuppositional Alternatives'', (co-supervised with Bernhard Schwarz, successfully defended in May 2017.)
 
 Dejan Milacic, ``Irrealis Mood in Kabyle'' (successfully defended in summer 2017.)
 
@@ -1315,7 +1318,7 @@ External examiner, pre-tenure formal review, Department of Linguistics, the Univ
 
 
 September 25 2010: ``Variedades del espa\~nol americano''. Eight-hour
-workshop for high shool teachers on the varieties of Spanish spoken in America, organized by the
+workshop for high school teachers on the varieties of Spanish spoken in America, organized by the
 Spanish Resource Center (Spanish Consulate, Boston), University of Massachusetts Boston.
 
 June 13 2009: ``Lo que los libros de texto no te cuentan''. Eight-hour
