--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -225,9 +225,12 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 
 Alonso-Ovalle, Luis \textit{\&} Aron Hirsch. (forthcoming) Keep \textit{Only} Strong,  \textit{Semantics and Pragmatics}.
 
-Alonso-Ovalle, Luis \textit{\&} Justin Royer. (2021) Random Choice from Likelihood: The Case of Chuj (Mayan), \textit{Journal of Semantics}, published online October, 29, 2021. %\\ \hspace*{\hfill}(\href{https://doi.org/10.1093/jos/ffab009}{https://doi.org/10.1093/jos/ffab009})
+Alonso-Ovalle, Luis \textit{\&} Justin Royer. 2021. Random Choice from Likelihood: The Case of Chuj (Mayan), \textit{Journal of Semantics}, 38(4), 483-529. 
+%\\ \hspace*{\hfill}(\href{https://doi.org/10.1093/jos/ffab009}{https://doi.org/10.1093/jos/ffab009})
 
-Alonso-Ovalle, Luis \textit{\&} Henrison Hsieh. (2021) Causes and expectations: On the interpretation of the Tagalog Ability / Involuntary Action form, \textit{Journal of Semantics}, 38(3), 441-472.% \hspace*{\hfill} (\href{https://doi.org/10.1093/jos/ffab008}{https://doi.org/10.1093/jos/ffab008}).
+%Journal of Semantics, Volume 38, Issue 4, November 2021, Pages 483–529, https://doi.org/10.1093/jos/ffab009
+
+Alonso-Ovalle, Luis \textit{\&} Henrison Hsieh. 2021. Causes and expectations: On the interpretation of the Tagalog Ability / Involuntary Action form, \textit{Journal of Semantics}, 38(3), 441-472.% \hspace*{\hfill} (\href{https://doi.org/10.1093/jos/ffab008}{https://doi.org/10.1093/jos/ffab008}).
 
 Alonso-Ovalle, Luis \textit{\&} Paula Men\'endez-Benito. 2018. Projecting Possibilities in the Nominal Domain. Spanish \textit{Uno Cualquiera}, \textit{Journal of Semantics}. 35:1, 1-41. %\\
 %\hspace*{\hfill}(\href{https://doi.org/10.1093/jos/ffx011}{https://doi.org/10.1093/jos/ffx011})
@@ -351,9 +354,9 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 Alonso-Ovalle, Luis and Jonathan Palucci. (forthcoming) Obligatory Wide Scope for \textit{Any} DPs?, \textit{Proceedings of the Thirty-Ninth West Coast Conference on Formal Linguistics}.
 
-Alonso-Ovalle, Luis and Justin Royer. (forthcoming) Modality in the Nominal Domain: The Chuj \textit{yalnhej}+ wh Series, \textit{Proceedings of the Thirty-first Semantics and Linguistic Theory Conference}, ed. by Nicole Dreier, Chloe Kwon, Thomas Darnell, and John Starr.
+Alonso-Ovalle, Luis and Justin Royer. 2021. Modality in the Nominal Domain: The Chuj \textit{yalnhej}+ wh Series, \textit{Proceedings of the Thirty-first Semantics and Linguistic Theory Conference}, ed. by Nicole Dreier, Chloe Kwon, Thomas Darnell, and John Starr, CLC Publications, Cornell University, pp. 061-081.
 
-Alonso-Ovalle, Luis and Jonathan Palucci. (2021) Numeral \textit{Any}: in Favor of Viability, \textit{Proceedings of the Fifty-first Annual Meeting of the North East Linguistic Society}, ed. by Alessa Farinella and Angelica Hill, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp 1-11.
+Alonso-Ovalle, Luis and Jonathan Palucci. 2021. Numeral \textit{Any}: in Favor of Viability, \textit{Proceedings of the Fifty-first Annual Meeting of the North East Linguistic Society}, ed. by Alessa Farinella and Angelica Hill, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp 1-11.
 
  Alonso-Ovalle, Luis and Esmail Moghiseh. 2021. Numeral \textit{Any}: the View from Farsi, \textit{Proceedings of the Thirtieth Semantics and Linguistic Theory Conference}, ed. by Joseph Rhyne, Kaelyn Lamp, Nicole Dreier, and Chloe Kwon, CLC Publications, Cornell University, pp. 485-503. %{\footnotesize [\href{https://doi.org/10.3765/salt.v30i0.4829}{https://doi.org/10.3765/salt.v30i0.4829}]}
 
@@ -816,7 +819,7 @@ Concord'' (with Elena Guerzoni), \textit{37th Meeting of the Chicago
 
 \textsc{Hisp} 310: How Spanish Works (Fall 2012, Fall 2013, Fall 2014.)
 
-\textsc{Ling} 260: Meaning in Language (Fall 2017, Fall 2019.)
+\textsc{Ling} 260: Meaning in Language (Fall 2017, Fall 2019, Fall 2021.)
 
 \textsc{Ling} 201: Introduction to Linguistics (Semantics and Pragmatics
 section), (Winter 2013.)
@@ -827,7 +830,7 @@ section), (Winter 2013.)
 
 \subsubsection*{Graduate level}
 
-\textsc{Ling} 665: Semantics 4 (Winter 2012, Winter 2014, Winter 2018, Winter 2020 (meets together with
+\textsc{Ling} 665: Semantics 4 (Winter 2012, Winter 2014, Winter 2018, Winter 2020, Winter 2022 (meets together with
 Ling 765).)
 
 \textsc{Ling} 660: Semantics 3 (Fall 2012, Fall 2014, Fall 2016, Fall 2018, Fall 2020.)
